alteração de medidas no css e alteração de novas imagens

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
  
 <main>
-    <img src="./img 2.png" alt="wide" class="logo-image"> 
+    <img src="./assets/img 2.png" alt="wide" class="logo-image"> 
 
   <div class="text">
     <h1>Wide coveragem location</h1>
